fix overflow issue

--- a/pages/about.module.scss
+++ b/pages/about.module.scss
@@ -18,7 +18,6 @@
   }
 
   .bioText {
-    text-align: justify;
     flex: 2;
     padding: 0 2rem;
   }
