--- a/pages/index.module.scss
+++ b/pages/index.module.scss
@@ -22,7 +22,8 @@
 
     img {
       height: 100%;
-      width: 100%;
+      // width: 100%;
+      flex: 1;
     }
   }
 
