--- a/src/components/layouts/Layout.module.scss
+++ b/src/components/layouts/Layout.module.scss
@@ -50,12 +50,12 @@
         h1 {
           left: 3.5rem;
           font-size: 2rem;
-          padding-left: 4vmin;
+          padding-left: 8vmin;
         }
       }
 
       .content {
-        padding: 4vmin;
+        padding: 8vmin 4vmin;
       }
     }
 
